[package]
name = "controller-emulator"
version = "0.1.1"
authors = ["Callum Moseley <callum.moseley1@gmail.com>"]
edition = "2018"

[lib]
name = "controller_emulator"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "src/bin/main.rs"

[[bin]]
name = "configure_ns_procon"
path = "src/bin/configure_ns_procon.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.22.3"
